RE-36 Switching from Constant to langFile for Manager Gamemode und Home